[package]
name = "arcdps_squad_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
flexi_logger = { version = "0.19", default_features = false, features = ["async", "compress"] }
backtrace = "0.3"
arcdps = { git = "https://github.com/Krappa322/arcdps_bindings.git", default-features = false } # `default-features = false` turns off logging through arcdps log
winapi = { version = "0.3", features = ["consoleapi", "dbghelp", "memoryapi", "psapi"] }
time = { version = "0.3", features = ["formatting", "macros"] }
static_init = "1.0"

[dev-dependencies]
more-asserts = "0.2"
rstest = "0.12"